Fix URL on Text post, remove optimizeLegibility
because Chrome sucks...

--- a/themes/misframe/static/css/style.css
+++ b/themes/misframe/static/css/style.css
@@ -7,7 +7,6 @@ body {
   padding: 0;
   font-size: 15px;
   color: #111;
-  text-rendering: optimizeLegibility;
 }
 
 div.wrapper {
